# slack-reminder-bot

./: .env  Cargo.toml
src/: main.rs
